--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>John Doe</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="#about">About</a></li>
+				<li><a href="#skills">Skills</a></li>
+				<li><a href="#projects">Projects</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<section id="about">
+			<h1>About Me</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus fringilla lorem a est pharetra, vel interdum urna convallis. Morbi non urna malesuada, imperdiet massa vel, faucibus lacus.</p>
+		</section>
+		<section id="skills">
+			<h1>My Skills</h1>
+			<ul>
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>JavaScript</li>
+			</ul>
+		</section>
+		<section id="projects">
+			<h1>My Projects</h1>
+			<ul>
+				<li><a href="#">Project 1</a></li>
+				<li><a href="#">Project 2</a></li>
+				<li><a href="#">Project 3</a></li>
+			</ul>
+		</section>
+		<section id="contact">
+			<h1>Contact Me</h1>
+			<form>
+				<label for="name">Name:</label>
+				<input type="text" id="name" name="name"><br>
+				<label for="email">Email:</label>
+				<input type="email" id="email" name="email"><br>
+				<label for="message">Message:</label>
+				<textarea id="message" name="message"></textarea><br>
+				<input type="submit" value="Send">
+			</form>
+		</section>
+	</main>
+</body>
+</html>
+
